--- a/styles.css
+++ b/styles.css
@@ -1,194 +1,239 @@
 * {
-    margin: 0px;
-    padding: 0px;
+  margin: 0px;
+  padding: 0px;
 }
 
 body {
-    display: flex;
-    flex-direction: column;
-    font-family:  arial;
+  overscroll-behavior-y: none;
+  display: flex;
+  flex-direction: column;
+  font-family: arial;
 }
 
 ul {
-    list-style-type: none;
-    margin: 0px;
-    padding: 0px;
+  list-style-type: none;
+  margin: 0px;
+  padding: 0px;
 
-    display: flex;
-    gap: 64px;
-
+  display: flex;
+  gap: 64px;
 }
 
 a {
-    font-size: 18px;
-    color: #E7EAEF;
-    text-decoration: none;
+  font-size: 18px;
+  color: #e7eaef;
+  text-decoration: none;
 }
 
 img {
-    border-radius: 12px;
+  border-radius: 12px;
 }
 
 .primary-color {
-    background: #37745B;
-    color: #E7EAEF;
+  background: #37745b;
+  color: #e7eaef;
 }
 
 .header {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
 
-    gap: 64px;
+  gap: 64px;
 
-    background-color: #37745B;
-    padding: 32px 156px;
+  background-color: #37745b;
+  padding: 32px 156px;
 }
 
 .footer {
-    display: flex;
-    align-items: center;
-    justify-content: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 
-    background-color: #37745B;
-    padding: 16px;
-    color: #E7EAEF;
+  background-color: #37745b;
+  padding: 16px;
+  color: #e7eaef;
 }
 
 .logo-text {
-    font-size: 24px;
-    font-weight: 500;
+  font-size: 24px;
+  font-weight: 500;
 }
 
 .hero-container {
-    display: flex;
-    gap: 64px;
-    padding: 64px 120px;
-    justify-content: space-evenly; 
-    flex-wrap: wrap;
+  display: flex;
+  gap: 64px;
+  padding: 64px 120px;
+  justify-content: space-evenly;
+  flex-wrap: wrap;
 }
 
-.intro>h1 {
-    margin-bottom: 18px;
-    flex-grow: 1;
+.intro > h1 {
+  margin-bottom: 18px;
+  flex-grow: 1;
 }
 
-.intro>p {
-    font-size: 18px;
-    max-width: 500px;
-    margin-bottom: 18px;
+.intro > p {
+  font-size: 18px;
+  max-width: 500px;
+  margin-bottom: 18px;
 }
 
 .hero-image {
-    flex-grow: 1;
-    max-width: 500px;
+  flex-grow: 1;
+  max-width: 500px;
 }
 
 .sign-up-button {
-    color: #224e3b;
-    background-color: #87dbbc;
-    width: 150px;
-    height: 35px;
+  color: #224e3b;
+  background-color: #87dbbc;
+  width: 150px;
+  height: 35px;
 
-    border: none;
-    border-radius: 6px;
+  border: none;
+  border-radius: 6px;
 
-    font-size: 17px;
-    font-weight: 600;
+  font-size: 17px;
+  font-weight: 600;
 }
 
 .container {
-    display: flex;
-    flex-direction: column;
+  display: flex;
+  flex-direction: column;
 }
 .content-area-tiles {
-    background-color: #e1eee7;
+  background-color: #e1eee7;
 
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    
-    padding: 40px 0px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 
-    gap: 40px;
-    
-    color: #2f644e;
+  padding: 40px 0px;
+
+  gap: 40px;
+
+  color: #2f644e;
 }
 
 .image-tiles {
-    display: flex;
-    gap: 60px;
+  display: flex;
+  gap: 60px;
 }
 
-
-.content-area-tiles>h2 {
-    font-size: 25px;
+.content-area-tiles > h2 {
+  font-size: 25px;
 }
 
 .tile {
-    display: flex;
-    flex-direction: column;
+  display: flex;
+  flex-direction: column;
 
-    justify-content: center;
-    align-items: center;
+  justify-content: center;
+  align-items: center;
 
-    max-width: 200px;
-    text-align: center;
+  max-width: 200px;
+  text-align: center;
 }
 
 .tile-img {
-    width: 140px;
-    height: 140px;
-    border-radius: 10px;
+  width: 140px;
+  height: 140px;
+  border-radius: 10px;
 
-    margin-bottom: 15px;
+  margin-bottom: 15px;
 }
 
 .color1 {
-    background-color: #459876;
+  background-color: #459876;
 }
 
 .color2 {
-    background-color: #3a7e62;
+  background-color: #3a7e62;
 }
 
 .color3 {
-    background-color: #337258;
+  background-color: #337258;
 }
 
 .color4 {
-    background-color: #2d634d;
+  background-color: #2d634d;
 }
 
 .content-area-quote {
-    background-color: #dbe7e1;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
+  background-color: #dbe7e1;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 
-    padding: 80px;
+  padding: 80px;
 }
 
 .quote-container {
-    width: 700px;
-    color: #224e3b;
+  width: 700px;
+  color: #224e3b;
 }
 .quote-container > h3 {
-    font-size: 36px;
-    font-style: italic;
-    font-weight: 300;
-    
-    text-align: center;
+  font-size: 36px;
+  font-style: italic;
+  font-weight: 300;
 
-    margin-bottom: 10px;
+  text-align: center;
+
+  margin-bottom: 10px;
 }
 
 .quote-container > p {
-    
-    text-align: right;
-    font-size: 22px;
+  text-align: right;
+  font-size: 22px;
+  font-weight: 600;
+  margin-right: 60px;
+}
+
+.content-area-newsletter {
+  background-color: #e1eee7;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 64px;
+}
+
+.card {
+    padding: 42px;
+    border-radius: 10px;
+    background-color: #459876;
+
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: end;
+    align-items: center;
+    gap: 48px;
+}
+
+.card-text {
+    color: #e7eaef;
+}
+
+.card-header {
+    font-size: 26px;
+    font-weight: 700;
+}
+
+.card-p {
+    font-size: 18px;
+}
+
+.card-button {
+    width: 150px;
+    height: 50px;
+
+    border-width: 2px;
+    border-radius: 6px;
+    border-color: #e7eaef;
+    background-color: #00000000;
+    border-style: solid;
+
+    color: #e7eaef;
+    font-size: 18px;
     font-weight: 600;
-    margin-right: 60px;
-    
 }
