--- a/styles.css
+++ b/styles.css
@@ -117,6 +117,7 @@ img {
 
 .image-tiles {
   display: flex;
+  flex-wrap: wrap;
   gap: 60px;
 }
 
@@ -205,7 +206,7 @@ img {
 
     display: flex;
     flex-wrap: wrap;
-    justify-content: end;
+    justify-content: center;
     align-items: center;
     gap: 48px;
 }
